--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!-- index.html -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Berkeley Science Bowl</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Berkeley Science Bowl</h1>
+    <h2>Welcome to the official website</h2>
+  </div>
+</body>
+</html>
 
