--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 </head>
 <body>
   <div class="container">
+    <img src="Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
     <h1>Berkeley Science Bowl</h1>
-    <h2>Welcome to the official website</h2>
   </div>
 </body>
 </html>
-
