--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
   <div class="container">
     <img src="Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
     <h1>Berkeley Science Bowl</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="resources.html">Resources</a>
+      <a href="faq.html">FAQ</a>
+      <a href="volunteer.html">Volunteer</a>
+      <a href="sponsors.html">Sponsors</a>
+      <a href="results.html">Results</a>
+      <a href="photos.html">Photos</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </div>
 </body>
 </html>
-
