--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
+  <header>
     <img src="Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
     <h1>Berkeley Science Bowl</h1>
     <nav>
@@ -22,6 +22,13 @@
       <a href="photos.html">Photos</a>
       <a href="contact.html">Contact</a>
     </nav>
-  </div>
+  </header>
+  <section class="container">
+    <h2>Welcome to the Berkeley Science Bowl</h2>
+    <p>Content for the home page goes here.</p>
+  </section>
+  <footer>
+    &copy; 2023 Berkeley Science Bowl. All rights reserved.
+  </footer>
 </body>
 </html>
