--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resources</title>
+  <title>Contact</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
+  <header>
     <img src="Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
-    <h1>Contact</h1>
+    <h1>Berkeley Science Bowl</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="resources.html">Resources</a>
@@ -20,9 +20,13 @@
       <a href="photos.html">Photos</a>
       <a href="contact.html">Contact</a>
     </nav>
-    <div class="content">
-      <p>Content for the Resources page goes here.</p>
-    </div>
-  </div>
+  </header>
+  <section class="container">
+    <h2>Resources</h2>
+    <p>Content for the Resources page goes here.</p>
+  </section>
+  <footer>
+    &copy; 2023 Berkeley Science Bowl. All rights reserved.
+  </footer>
 </body>
 </html>
