--- a/faq.html
+++ b/faq.html
@@ -22,11 +22,11 @@
     </nav>
   </header>
   <section class="container">
-    <h2>Resources</h2>
+    <h2>FAQ</h2>
     <p>Content for the Resources page goes here.</p>
   </section>
   <footer>
-    &copy; 2023 Berkeley Science Bowl. All rights reserved.
+    &copy; 2024 Berkeley Science Bowl. All rights reserved.
   </footer>
 </body>
 </html>
