--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     </nav>
   </header>
   <section class="container">
-    <h2>CoNtAcT</h2>
+    <h2>Contact</h2>
     <p>Content for the Resources page goes here.</p>
   </section>
   <footer>
