--- a/resources.html
+++ b/resources.html
@@ -12,9 +12,13 @@
     <h1>Berkeley Science Bowl</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="resources.html">Resources</a>
-      <a href="faq.html">FAQ</a>
-      <a href="volunteer.html">Volunteer</a>
+      <div class="dropdown">
+        <a href="resources.html">Resources</a>
+        <div class="dropdown-content">
+          <a href="faq.html">FAQ</a>
+          <a href="volunteer.html">Volunteer</a>
+        </div>
+      </div>
       <a href="sponsors.html">Sponsors</a>
       <a href="results.html">Results</a>
       <a href="photos.html">Photos</a>
@@ -26,9 +30,8 @@
     <p>Content for the Resources page goes here.</p>
   </section>
   <footer>
-    &copy; 2024 Berkeley Science Bowl. All rights reserved.
+    &copy; 2023 Berkeley Science Bowl. All rights reserved.
   </footer>
 </body>
 </html>
-
 
