--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -27,13 +25,18 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+  
+  <!-- Banner for the home page -->
+  <div class="banner">
+    BSB Fall 2023 will be hosted by ACS@Berkeley on Sunday, December 3rd!
+  </div>
+  
   <section class="container">
     <h2>Welcome to the Berkeley Science Bowl</h2>
     <p>Content for the home page goes here.</p>
   </section>
   <footer>
-    &copy; 2023 Berkeley Science Bowl. All rights reserved.
+    &copy; 2024 Berkeley Science Bowl. All rights reserved.
   </footer>
 </body>
 </html>
-
