--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,7 +38,8 @@
     <p>Content for the home page goes here.</p>
   </section>
   <footer>
-    &copy; 2024 Berkeley Science Bowl. All rights reserved.
+    &copy; 2023 Berkeley Science Bowl. All rights reserved.
   </footer>
 </body>
 </html>
+
