--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
   <div class="banner">
     BSB Fall 2023 will be hosted by ACS@Berkeley on Sunday, December 3rd!
   </div>
+
+  <div class="banner1">
+    Important Dates:
+  </div>
+
+  <div class="banner2">
+    Payment Deadline — November 5th
+    Competition Day — December 3rd
+  </div>
   
   <section class="container">
     <h2>Welcome to the Berkeley Science Bowl</h2>
