--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- index.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,19 +30,17 @@
   <div class="banner">
     BSB Fall 2023 will be hosted by ACS@Berkeley on Sunday, December 3rd!
   </div>
-
-  <div class="banner1">
-    Important Dates:
-  </div>
-
-  <div class="banner2">
-    Payment Deadline — November 5th
-    Competition Day — December 3rd
-  </div>
   
   <section class="container">
     <h2>Welcome to the Berkeley Science Bowl</h2>
     <p>Content for the home page goes here.</p>
+
+    <!-- New section for important dates -->
+    <div class="important-dates">
+      <p class="important-title">Important Dates:</p>
+      <p class="important-info">Payment Deadline — November 5th</p>
+      <p class="important-info">Competition Day — December 3rd</p>
+    </div>
   </section>
   <footer>
     &copy; 2023 Berkeley Science Bowl. All rights reserved.
