--- a/index.html
+++ b/index.html
@@ -35,12 +35,8 @@
     <!-- New section for important dates -->
     <div class="important-dates">
       <p class="important-title">Important Dates:</p>
-      <p class="important-info">Payment Deadline — November 5th</p>
-      <p class="important-info">Competition Day — December 3rd</p>
-      <br>
-      <br>
-      <h2>Welcome to the Berkeley Science Bowl</h2>
-      <p>Content for the home page goes here.</p>
+      <p class="important-info1">Payment Deadline — November 5th</p>
+      <p class="important-info2">Competition Day — December 3rd</p>
       <br>
     </div>
   </section>
