--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!-- New section for important dates -->
     <div class="important-dates">
       <p class="important-title">Important Dates:</p>
-      <p class="important-info">Payment Deadline — November 5th</p>
-      <p class="important-info">Competition Day — December 3rd</p>
+      <p class="important-info">Payment Deadline -- November 5th</p>
+      <p class="important-info">Competition Day -- December 3rd</p>
       <br>
     </div>
   </section>
