--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
     <!-- New section for important dates -->
     <div class="important-dates">
       <p class="important-title">Important Dates:</p>
-      <p class="important-info">Payment Deadline --</p>
-      <p class="important-info-bold">November 5th</p>
-      <p class="important-info">Competition Day --</p>
-      <p class="important-info-bold">December 3rd</p>
+      <p class="important-info">Payment Deadline -- <strong>Novemeber 5th</strong></p>
+      <p class="important-info">Competition Day -- <strong>December 3rd</strong></p>
       <br>
     </div>
   </section>
