--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
       <br>
     </div>
   </section>
+
+  <section class="video-section">
+    <div class="video-container">
+      <iframe width="1154" height="613" src="https://www.youtube.com/embed/LEc2uR_H2Tw" title="Berkeley Science Bowl Fall 2023 Semifinals and Final Rounds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+  </section>
+
   <footer>
     &copy; 2024 Berkeley Science Bowl. All rights reserved.
   </footer>
