--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
     </div>
   </section>
 
+  <section class="container">
+    <div class="about">
+      <p class="about-title">About</p>
+      <p class="about-info">The U.S. Department of Energy (DOE) National Science Bowl® (NSB) is a nationwide academic competition that tests students’ knowledge in all areas of science and mathematics. Teams of four students face-off in a fast-paced question-and-answer format, being tested on a range of science disciplines including biology, chemistry, earth and space science, physics, energy, and math.</p>
+      <p class="about-info">Berkeley’s NSB invitational is held exclusively on the UC Berkeley campus, run by Berkeley students, and includes a unique energy division that tests knowledge on current research done at the Lawrence Berkeley National Laboratories and on-campus UC Berkeley research labs!</p>
+      <br>
+    </div>
+  </section>
+
   <footer>
     &copy; 2024 Berkeley Science Bowl. All rights reserved.
   </footer>
