--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <img src="Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
-    <h1>Berkeley Science Bowl</h1>
+    <h1>FAQ</h1>
     <nav>
       <a href="index.html">Home</a>
       <div class="dropdown">
@@ -26,8 +26,39 @@
     </nav>
   </header>
   <section class="container">
-    <h2>FAQ</h2>
-    <p>Content for the FAQ page goes here.</p>
+    <p class="faq-title">Frequently Asked Questions</p>
+    <br>
+    <p class="faq-question">Q: How many teams will be participating?</p>
+    <p class="faq-answer">A: We are hosting a total of 36 teams from various high schools.</p>
+    <br>
+    <p class="faq-question">Q: How many people per team?</p>
+    <p class="faq-answer">A: Each team can have between 4-5 students. We have a strict cap at 5 students per team.</p>
+    <br>
+    <p class="faq-question">Q: Where are the questions from?</p>
+    <p class="faq-answer">A: The questions are written exclusively by UC Berkeley student volunteers. All questions are in the official NSB style.</p>
+    <br>
+    <p class="faq-question">Q: What’s our “Energy” category?</p>
+    <p class="faq-answer">A: BSB Fall 2023 will feature a reinvented “Energy” category based on UC Berkeley and Lawrence Berkeley National Lab research.</p>
+    <br>
+    <p class="faq-question">Q: What difficulty are the questions?</p>
+    <p class="faq-answer">A: The questions will range from Regionals-level in Round Robin to Nationals-level by the end of Double Elimination.</p>
+    <br>
+    <p class="faq-question">Q: What’s our competition format?</p>
+    <p class="faq-answer">A: There will be 5 Round Robin rounds in the morning, followed by a 16-team Double Elimination tournament. We will be providing spaces for informal scrimmages for eliminated teams in the afternoon.</p>
+    <br>
+    <p class="faq-question">Q: What times will the competition run from?</p>
+    <p class="faq-answer">A: We expect our tournament to run from 7:30 am to 6:00 pm (<strong><a href="Tournament_Schedule.pdf" target="_blank">Projected Day Schedule</a></strong>). However, NSB tournaments often run late, so make sure to prepare for this in advance. We will do our best to reduce delays throughout the day.</p>
+    <br>
+    <p class="faq-question">Q: Does our team coach need to attend?</p>
+    <p class="faq-answer">A: No, but we require at least <strong><span style="color: red;">one non-competing adult</span></strong> to serve as a chaperone from each school. These individuals will be responsible for communicating directly with BSB organizers on competition day.</p>
+    <br>
+    <p class="faq-question">Q: Will there be food served?</p>
+    <p class="faq-answer">A: Yes, food will be catered, and we will have vegetarian options in order to fulfill those with dietary restrictions. Food will only be available for coaches, competitors and volunteers.</p>
+    <br>
+    <p class="faq-question">Q: What happens if my team is eliminated?</p>
+    <p class="faq-answer">A: We have fun activities planned for eliminated teams! We encourage everyone to stay and watch the Championship round, which will be livestreamed to audiences across the country.</p>
+    <br>
+    <br>
   </section>
   <footer>
     &copy; 2024 Berkeley Science Bowl. All rights reserved.
