--- a/volunteer.html
+++ b/volunteer.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <img src="Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
-    <h1>Berkeley Science Bowl</h1>
+    <h1>Volunteer</h1>
     <nav>
       <a href="index.html">Home</a>
       <div class="dropdown">
@@ -25,10 +25,19 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
+  <div class="banner">
+    <p>Interested in volunteering for the Berkeley Science Bowl Invitational?</p>
+    <p><a href="https://forms.gle/jbpXFffvek5Y1jD48" target="_blank" class="white-link">Sign up</a> for our newsletter!</p>
+  </div>
+
+  
+
   <section class="container">
     <h2>Volunteer</h2>
     <p>Content for the Volunteer page goes here.</p>
   </section>
+
   <footer>
     &copy; 2024 Berkeley Science Bowl. All rights reserved.
   </footer>
