--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
+    <img src="Images\Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
     <h1>Berkeley Science Bowl</h1>
     <nav>
       <a href="index.html">Home</a>
@@ -26,8 +26,7 @@
     </nav>
   </header>
   <section class="container">
-    <h2>Contact</h2>
-    <p>Content for the Resources page goes here.</p>
+    <p class="contact">Any general question? Email <a href="mailto:barmanuse05@berkeley.edu">barmanuse05@berkeley.edu</a></p>
   </section>
   <footer>
     &copy; 2024 Berkeley Science Bowl. All rights reserved.
