--- a/resources.html
+++ b/resources.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
+    <img src="Images\Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
     <h1>Resources</h1>
     <nav>
       <a href="index.html">Home</a>
@@ -29,24 +29,26 @@
   <section class="container">
     <div class="resources">
       <p class="resources-title">Projected Day Schedule:</p>
+    </div> 
     <div class="pdf-container">
-      <iframe src="Tournament_Schedule.pdf" width="60%" height="500px"></iframe>
+      <iframe src="Tournament_Schedule.pdf" width="70%" height="500px"></iframe>
+    </div> 
     <div class ="resources">
       <p class="resources-info">Our Science Bowl Competition will follow the <strong><a href="https://science.osti.gov/-/media/wdts/nsb/pdf/NSB-Resources/Rules2024.pdf" target="_blank">Official DOE Rules</a></strong>.</p>
       <p class="resources-title">Sample Questions:</p>
-      <p class="resources-links"><a href="https://science.osti.gov/wdts/nsb/Regional-Competitions/Resources/HS-Sample-Questions" target="_blank">High School Samples</a></p>
-      <p class="resources-links"><a href="https://drive.google.com/drive/folders/1gh-j4YxBev9mxn0Dab7F6lTSy0FsWiey?usp=sharing" target="_blank">2022 MIT Science Bowl Invitational</a></p>
-      <p class="resources-links"><a href="https://drive.google.com/drive/folders/1xBSlKAc5pkZC5SQmpUpEaEEywifgdMl2" target="_blank">2021 MIT Science Bowl Invitational</a></p>
-      <p class="resources-links"><a href="https://drive.google.com/drive/folders/15dr9C2tDSBGW0M-oJDU8qrxg0qpZ22MR" target="_blank">2020 MIT Science Bowl Invitational</a></p>
+      <p class="resources-info"><a href="https://science.osti.gov/wdts/nsb/Regional-Competitions/Resources/HS-Sample-Questions" target="_blank">High School Samples</a></p>
+      <p class="resources-info"><a href="https://drive.google.com/drive/folders/1gh-j4YxBev9mxn0Dab7F6lTSy0FsWiey?usp=sharing" target="_blank">2022 MIT Science Bowl Invitational</a></p>
+      <p class="resources-info"><a href="https://drive.google.com/drive/folders/1xBSlKAc5pkZC5SQmpUpEaEEywifgdMl2" target="_blank">2021 MIT Science Bowl Invitational</a></p>
+      <p class="resources-info"><a href="https://drive.google.com/drive/folders/15dr9C2tDSBGW0M-oJDU8qrxg0qpZ22MR" target="_blank">2020 MIT Science Bowl Invitational</a></p>
       <p class="resources-title">Past National Championship Matches:</p>
-      <p class="resources-links"><a href="https://www.youtube.com/watch?v=4rWYhgyAxhg&ab_channel=doescience" target="_blank">2022 Stream</a></p>
-      <p class="resources-links"><a href="https://www.youtube.com/watch?v=rNc2Kflrm9k&ab_channel=doescience" target="_blank">2019 Stream</a></p>
-      <p class="resources-links"><a href="https://www.youtube.com/watch?v=bypLzoqJc_I&ab_channel=doescience" target="_blank">2018 Stream</a></p>
-      <p class="resources-links"><a href="https://www.youtube.com/watch?v=9XJE5DewtLw&ab_channel=doescience" target="_blank">2017 Stream</a></p>
-      <p class="resources-links"><a href="https://www.youtube.com/watch?v=AzRDo14N4-o&ab_channel=doescience" target="_blank">2016 Stream</a></p>
-      <p class="resources-links"><a href="https://www.youtube.com/watch?v=yA6Lhv3FcSU&ab_channel=doescience" target="_blank">2015 Stream</a></p>
-      <p class="resources-links"><a href="https://www.youtube.com/watch?v=5HIQhXJxlLE&ab_channel=doescience" target="_blank">2014 Stream</a></p>
-      <p class="resources-links"><a href="https://www.youtube.com/watch?v=fgZ7js-Whhs&ab_channel=doescience" target="_blank">2013 Stream</a></p>
+      <p class="resources-info"><a href="https://www.youtube.com/watch?v=4rWYhgyAxhg&ab_channel=doescience" target="_blank">2022 Stream</a></p>
+      <p class="resources-info"><a href="https://www.youtube.com/watch?v=rNc2Kflrm9k&ab_channel=doescience" target="_blank">2019 Stream</a></p>
+      <p class="resources-info"><a href="https://www.youtube.com/watch?v=bypLzoqJc_I&ab_channel=doescience" target="_blank">2018 Stream</a></p>
+      <p class="resources-info"><a href="https://www.youtube.com/watch?v=9XJE5DewtLw&ab_channel=doescience" target="_blank">2017 Stream</a></p>
+      <p class="resources-info"><a href="https://www.youtube.com/watch?v=AzRDo14N4-o&ab_channel=doescience" target="_blank">2016 Stream</a></p>
+      <p class="resources-info"><a href="https://www.youtube.com/watch?v=yA6Lhv3FcSU&ab_channel=doescience" target="_blank">2015 Stream</a></p>
+      <p class="resources-info"><a href="https://www.youtube.com/watch?v=5HIQhXJxlLE&ab_channel=doescience" target="_blank">2014 Stream</a></p>
+      <p class="resources-info"><a href="https://www.youtube.com/watch?v=fgZ7js-Whhs&ab_channel=doescience" target="_blank">2013 Stream</a></p>
       <br>
     </div> 
   </section>
