--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
+    <img src="Images\Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
     <h1>Berkeley Science Bowl</h1>
     <nav>
       <a href="index.html">Home</a>
