--- a/sponsors.html
+++ b/sponsors.html
@@ -5,10 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sponsors</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px; /* Adjust spacing between images */
+      justify-items: center; /* Center align images */
+      align-items: center; /* Center align images vertically */
+      padding: 20px;
+    }
+    .grid img {
+      max-width: 100%;
+      height: auto;
+      margin: 30px 0; /* Adjust the top and bottom margin of the images */
+    }
+    /* Center the second row images */
+    .grid img:nth-child(4) {
+      grid-column: 1 / 3; /* Place the image between the first and second column */
+      justify-self: center; /* Center align the image horizontally */
+      grid-row: 2; /* Ensure it stays in the second row */
+    }
+    .grid img:nth-child(5) {
+      grid-column: 2 / 4; /* Place the image between the second and third column */
+      justify-self: center; /* Center align the image horizontally */
+      grid-row: 2; /* Ensure it stays in the second row */
+    }
+  </style>
 </head>
 <body>
   <header>
-    <img src="Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
+    <img src="Images\Logo.png" alt="Berkeley Science Bowl Logo" class="logo">
     <h1>Berkeley Science Bowl</h1>
     <nav>
       <a href="index.html">Home</a>
@@ -25,10 +51,32 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <section class="container">
-    <h2>Sponsors</h2>
-    <p>Content for the Resources page goes here.</p>
-  </section>
+    <div class="grid">
+      <img src="Images/NSB.png" alt="NSB" style="width: 400px">
+      <img src="Images/ACS.png" alt="ACS"style="width: 200px">
+      <img src="Images/ASUC.png" alt="ASUC"style="width: 500px">
+      <img src="Images/CoC.png" alt="CoC"style="width: 500px">
+      <img src="Images/Wolfram.png" alt="Wolfram"style="width: 400px">
+      <img src="Images/Cytokinetics.jpg" alt="cyt"style="width: 300px">
+      <img src="Images/Boxed Water.jpg" alt="bw"style="width: 200px">
+      <img src="Images/CalACS.jpg" alt="CalaCs"style="width: 400px">
+      <br>
+      <br>
+    </div>
+
+    <div class="sponsor">
+      <p class="sponsor-text"><strong>Individual Donors:</strong></p>
+      <p class="sponsor-text">Eric Tilenus</p>
+      <p class="sponsor-text">Randy Yang (Berkeley City College)</p>
+      <br>
+      <br>
+      <p class="sponsor-text1">Thank you to our generous sponsors!</p>
+      <p class="sponsor-text1">Interested in sponsoring this even? Email <a href="mailto:barmanuse05@berkeley.edu">barmanuse05@berkeley.edu</a></p>
+      <br>
+    </div>
+  </section>  
   <footer>
     &copy; 2024 Berkeley Science Bowl. All rights reserved.
   </footer>
