--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,11 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <section class="container">
-    <p class="contact">Any general question? Email <a href="mailto:barmanuse05@berkeley.edu">barmanuse05@berkeley.edu</a></p>
+    <p class="contact">Any general question? Email <a href="mailto:acsberkeley@berkeley.edu">acsberkeley@berkeley.edu</a></p>
   </section>
+  
   <footer>
     &copy; 2024 Berkeley Science Bowl. All rights reserved.
   </footer>
