--- a/volunteer.html
+++ b/volunteer.html
@@ -43,7 +43,7 @@
       <p class="volunteer-info">We will be recruiting volunteers to help the day of the compeition soon</p>
       <p class="volunteer-info"><strong>Requirements:</strong> be a currently-enrolled UC Berkeley student.</p>
       <br>
-      <p class="volunteer-info">Contact <a href="mailto:barmanuse05@berkeley.edu">barmanuse05@berkeley.edu</a> with any questions!</p>
+      <p class="volunteer-info">Contact <a href="mailto:acsberkeley@berkeley.edu">acsberkeley@berkeley.edu</a> with any questions!</p>
       <br>
     </div>
   </section>
