--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
     </nav>
   </header>
   
-  <!-- Banner for the home page -->
   <div class="banner">
     BSB Fall 2023 will be hosted by ACS@Berkeley on Sunday, December 3rd!
   </div>
   
   <section class="container">
-    <!-- New section for important dates -->
     <div class="important-dates">
       <p class="important-title">Important Dates:</p>
       <p class="important-info">Payment Deadline -- <strong>Novemeber 5th</strong></p>
@@ -41,8 +39,8 @@
     </div>
   </section>
 
-  <section class="video-section">
-    <div class="video-container">
+  <section class="video-final-section">
+    <div class="video-final-container">
       <iframe width="1154" height="613" src="https://www.youtube.com/embed/LEc2uR_H2Tw" title="Berkeley Science Bowl Fall 2023 Semifinals and Final Rounds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </section>
