--- a/photos.html
+++ b/photos.html
@@ -25,10 +25,31 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-  <section class="container">
-    <h2>Photos</h2>
-    <p>Content for the Resources page goes here.</p>
-  </section>
+
+
+  <div class="photo-grid">
+    <img src="Images/photo1.jpg" alt="Image 1">
+    <img src="Images/photo2.jpg" alt="Image 2">
+    <img src="Images/photo3.jpg" alt="Image 3">
+    <img src="Images/photo4.jpg" alt="Image 4">
+    <img src="Images/photo5.jpg" alt="Image 5">
+    <img src="Images/photo6.jpg" alt="Image 6">
+    <img src="Images/photo7.jpg" alt="Image 7">
+    <img src="Images/photo8.jpg" alt="Image 8">
+    <img src="Images/photo9.jpg" alt="Image 9">
+    <img src="Images/photo10.jpg" alt="Image 10">
+    <img src="Images/photo11.jpg" alt="Image 11">
+    <img src="Images/photo12.jpg" alt="Image 12">
+    <img src="Images/photo13.jpg" alt="Image 13">
+    <img src="Images/photo14.jpg" alt="Image 14">
+    <img src="Images/photo15.jpg" alt="Image 15">
+    <img src="Images/photo16.jpg" alt="Image 16">
+  </div>
+
+  <div class="photo">
+    <img src="Images/photo17.jpg" alt="Image 17" class="centered">
+  </div>
+
   <footer>
     &copy; 2024 Berkeley Science Bowl. All rights reserved.
   </footer>
