--- a/resources.html
+++ b/resources.html
@@ -30,9 +30,11 @@
     <div class="resources">
       <p class="resources-title">Projected Day Schedule:</p>
     </div> 
-    <div class="pdf-container">
+    
+    <div class="resources-pdf-container">
       <iframe src="Tournament_Schedule.pdf" width="70%" height="500px"></iframe>
-    </div> 
+    </div>
+
     <div class ="resources">
       <p class="resources-info">Our Science Bowl Competition will follow the <strong><a href="https://science.osti.gov/-/media/wdts/nsb/pdf/NSB-Resources/Rules2024.pdf" target="_blank">Official DOE Rules</a></strong>.</p>
       <p class="resources-title">Sample Questions:</p>
