--- a/volunteer.html
+++ b/volunteer.html
@@ -38,6 +38,7 @@
       <p class="volunteer-info">We are currently recruiting Writers for BSB Fall 2024!</p>
       <p class="volunteer-info">If you are interested, please fill out <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSe_W_On-YresxiawPDDjp7jle8LYHOGhW_UKTqNsruh1mwYYQ/viewform" target="_blank">this form</a></strong> which will ask for a sample document containing 5 Toss-up/Bonus pairs in the <strong><a href="https://science.osti.gov/wdts/nsb/Regional-Competitions/Resources/HS-Sample-Questions" target="_blank">official DOE format</a></strong>.</p>
       <p class="volunteer-info">Categories Include: <strong>Math</strong>, <strong>Biology</strong>, <strong>Chemistry</strong>, <strong>Physics</strong>, and <strong>Earth & Space Science</strong></p>
+      <p class="volunteer-info"><strong>Requirements:</strong> be a currently-enrolled UC Berkeley student.</p>
       <br>
       <p class="volunteer-under">Day of Volunteers</p>
       <p class="volunteer-info">We will be recruiting volunteers to help the day of the compeition soon</p>
