--- a/sponsors.html
+++ b/sponsors.html
@@ -5,32 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sponsors</title>
   <link rel="stylesheet" href="styles.css">
-  <style>
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px; /* Adjust spacing between images */
-      justify-items: center; /* Center align images */
-      align-items: center; /* Center align images vertically */
-      padding: 20px;
-    }
-    .grid img {
-      max-width: 100%;
-      height: auto;
-      margin: 30px 0; /* Adjust the top and bottom margin of the images */
-    }
-    /* Center the second row images */
-    .grid img:nth-child(4) {
-      grid-column: 1 / 3; /* Place the image between the first and second column */
-      justify-self: center; /* Center align the image horizontally */
-      grid-row: 2; /* Ensure it stays in the second row */
-    }
-    .grid img:nth-child(5) {
-      grid-column: 2 / 4; /* Place the image between the second and third column */
-      justify-self: center; /* Center align the image horizontally */
-      grid-row: 2; /* Ensure it stays in the second row */
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -53,17 +27,18 @@
   </header>
 
   <section class="container">
-    <div class="grid">
+    <div class="spon-grid3">
       <img src="Images/NSB.png" alt="NSB" style="width: 400px">
       <img src="Images/ACS.png" alt="ACS"style="width: 200px">
       <img src="Images/ASUC.png" alt="ASUC"style="width: 500px">
-      <img src="Images/CoC.png" alt="CoC"style="width: 500px">
-      <img src="Images/Wolfram.png" alt="Wolfram"style="width: 400px">
       <img src="Images/Cytokinetics.jpg" alt="cyt"style="width: 300px">
       <img src="Images/Boxed Water.jpg" alt="bw"style="width: 200px">
       <img src="Images/CalACS.jpg" alt="CalaCs"style="width: 400px">
-      <br>
-      <br>
+    </div>
+
+    <div class="spon-grid2">
+      <img src="Images/CoC.png" alt="CoC"style="width: 500px">
+      <img src="Images/Wolfram.png" alt="Wolfram"style="width: 400px">
     </div>
 
     <div class="sponsor">
@@ -76,7 +51,8 @@
       <p class="sponsor-text1">Interested in sponsoring this even? Email <a href="mailto:acsberkeley@berkeley.edu">acsberkeley@berkeley.edu</a></p>
       <br>
     </div>
-  </section>  
+  </section>
+    
   <footer>
     &copy; 2024 Berkeley Science Bowl. All rights reserved.
   </footer>
