--- a/sponsors.html
+++ b/sponsors.html
@@ -48,7 +48,7 @@
       <br>
       <br>
       <p class="sponsor-text1">Thank you to our generous sponsors!</p>
-      <p class="sponsor-text1">Interested in sponsoring this even? Email <a href="mailto:acsberkeley@berkeley.edu">acsberkeley@berkeley.edu</a></p>
+      <p class="sponsor-text1">Interested in sponsoring this event? Email <a href="mailto:acsberkeley@berkeley.edu">acsberkeley@berkeley.edu</a></p>
       <br>
     </div>
   </section>
